SA tests fail with "Windbg Error: ReadVirtual failed"

XMLWordPrintable

    • b20
    • x86_64
    • windows

        The following test failed in the JDK14 CI due to "Windbg Error":

        serviceability/sa/ClhsdbCDSJstackPrintAll.java

        Here's the error that was spotted:

        Error: sun.jvm.hotspot.debugger.DebuggerException: Windbg Error: ReadVirtual failed!

              Assignee:
              Chris Plummer
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: