8230731: SA tests fail with "Windbg Error: ReadVirtual failed

Reviewed-by: amenkov, sspitsyn